--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
     "prop-types": "^15.6.2",
     "mobx": "^4.2.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
     "react-dropdown": "^1.3.0",
     "react-hot-loader": "^4.3.3",
     "react-tabs": "^2.0.0",
