--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 ### Linux ###
 *~
-
 # KDE directory preferences
 .directory
 # OS X folder attributes
@@ -24,7 +23,6 @@ node_modules
 lib/
 stats.json
 cypress/
-bundles/
 typings/*
 !typings/styled-patch.d.ts
 cli/index.js
@@ -35,3 +33,5 @@ cli/index.js
 .ghpages-tmp
 stats.json
 /package-lock.json
+
+.idea
