--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "documentation",
     "React.js"
   ],
-  "main": "bundles/redoc.lib.js",
+  "main": "bundles/redoc.standalone.js",
   "types": "typings/index.d.ts",
   "scripts": {
     "start": "webpack-dev-server --mode=development --env.playground --hot --config demo/webpack.config.ts",
